--- a/resources/server.cfg
+++ b/resources/server.cfg
@@ -1,3 +1,5 @@
+exec secrets.cfg
+
 tv_enable 1                     // Turn on CSTV
 tv_name "Winter Split TV"         // Name in the browser
 tv_delay 0                     // 90 or 105 seconds delay (Anti-Cheat standard)
