--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ resources/*
 !/server/game/csgo/mecz.json
 !/resources/server.cfg
 !/resources/admins.json
+!/resources/secrets-example.cfg
+!/resources/rcon-example.json
 !/steamcmd/cs2-updater.txt
 !/steamcmd/steamcmd.exe
 # Ignore all other files in the server and steamcmd directories 
