--- a/resources/config.cfg
+++ b/resources/config.cfg
@@ -44,11 +44,11 @@ matchzy_enable_tech_pause true
 
 // Flag required to use tech pause. Blank for anyone
 // Default value: ""
-matchzy_tech_pause_flag ""
+matchzy_tech_pause_flag "123456"
 
 // Tech pause duration in seconds. Set -1 to keep it infinite.
 // Default value: 300
-matchzy_tech_pause_duration 300
+matchzy_tech_pause_duration -1
 
 // Max tech pauses allowed.
 // Default value: 2
