--- a/resources/server.cfg
+++ b/resources/server.cfg
@@ -6,3 +6,5 @@ tv_delay 0                     // 90 or 105 seconds delay (Anti-Cheat standard)
 tv_delaymapchange 1             // Wait for broadcast to finish before changing map
 tv_maxclients 1                // How many spectators (or relays) can connect
 tv_autorecord 1                 // AUTOMATICALLY record demos of every match
+sv_logecho 1
+log on
