--- a/resources/server.cfg
+++ b/resources/server.cfg
@@ -6,6 +6,7 @@ tv_delay 0                     // 90 or 105 seconds delay (Anti-Cheat standard)
 tv_delaymapchange 1             // Wait for broadcast to finish before changing map
 tv_maxclients 1                // How many spectators (or relays) can connect
 tv_autorecord 1                 // AUTOMATICALLY record demos of every match
+tv_secure_bypass 1
 
 // Disable strict delta tick enforcement (Fixes random spectator disconnects)
 sv_deltaticks_enforce 0
