--- a/resources/relay.cfg
+++ b/resources/relay.cfg
@@ -2,5 +2,8 @@ tv_secure_bypass 1
 
 sv_deltaticks_enforce 0
 
-tv_deltacache 0
-tv_maxrate 0
+tv_stoprecord              // Stop any existing recordings
+tv_autorecord 0            // Ensure no recording starts
+tv_timeout 150           // Increase timeout to 1 minute
+tv_autoretry 1                 // Force the relay to keep retrying if it drops
+tv_dispatchmode 0          // Prevents the relay from trying to redirect clients
