--- a/resources/relay.cfg
+++ b/resources/relay.cfg
@@ -7,3 +7,7 @@ tv_autorecord 0            // Ensure no recording starts
 tv_timeout 150           // Increase timeout to 1 minute
 tv_autoretry 1                 // Force the relay to keep retrying if it drops
 tv_dispatchmode 0          // Prevents the relay from trying to redirect clients
+
+sv_hibernate_when_empty 0
+sv_hibernate_postgame_delay 5
+tv_delay 0
